# discourse

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  ide-debate.yaml  workshop-example.yaml
discourse/: audit.py  claude.py  conversation.py  document.py  main.py  orchestrator.py  workshop.py
